--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -580,7 +580,8 @@
                                     <option value="oc_volunteer" data-points="30">OC Volunteer (30 points)</option>
                                     <option value="oc_assigned" data-points="20">OC Assigned (20 points)</option>
                                     <option value="oc_no_work" data-points="10">OC No Work (10 points)</option>
-                                    <option value="oc_manager" data-points="50">OC Manager (50 points)</option>
+                                    <option value="oc_medium" data-points="50">OC Medium (50 points)</option>
+                                    <option value="oc_heavy" data-points="70">OC Heavy (70 points)</option>
                                 </optgroup>
                                 
                                 <!-- Events -->
